assets/css/_core/_media.scss
@media only screen and (max-width: 1610px) {
  body{
    background-position:
    left 10rem bottom 2rem,
    left 1rem bottom 2.5rem,
    right 0.5rem bottom 0.5rem,
    right 16rem bottom 4rem,
    center bottom;
  }
}

@media only screen and (max-width: 1580px) {
  body{
    background-position:
    left 9rem bottom 2rem,
    left 0.5rem bottom 2.5rem,
    right 0.5rem bottom 0.5rem,
    right 16rem bottom 4rem,
    center bottom;
  }
}


@media only screen and (max-width: 1440px) {
  body{
    background-position:
    left 8rem bottom 1.5rem,
    left 0.5rem bottom 2.5rem,
    right 0.5rem bottom 0.5rem,
    right 16rem bottom 4rem,
    center bottom;
  }
}


@media only screen and (max-width: 1460px) {
  body{
    background-position:
    left 8rem bottom 1.5rem,
    left 0.25rem bottom 3rem,
    right 0.5rem bottom 0.5rem,
    right 14rem bottom 4rem,
    center bottom;
  }
}

@media only screen and (max-width: 1435px) {
  body{
    background-position:
    left 8rem bottom 1.5rem,
    left 0.25rem bottom 3rem,
    right 0.5rem bottom 0.5rem,
    right 12rem bottom 4rem,
    center bottom;
  }
}

@media only screen and (max-width: 1435px) {
  body{
    background-position:
    left 8rem bottom 1.5rem,
    left 0.25rem bottom 3rem,
    right -4.5rem bottom 0.5rem,
    right 8.5rem bottom 5rem,
    center bottom;
  }

  .home-posts{
    text-shadow: 0 0 25px #fff, 0 0 25px #fff, 0 0 25px #fff, 0 0 10px #fff, 0 4px 15px #fff, 0 0 25px #fff, 0 0 5px #fff,0 0 10px #fff,0 0 20px #fff,0 0 10px #fff;
  }
}

@media only screen and (max-width: 1260px) {
  body{
    background-position:
    left 6rem bottom,
    left 0.25rem bottom 3rem,
    right -4.5rem bottom 0.5rem,
    right 6.5rem bottom 5rem,
    center bottom;
  }
}


@media only screen and (max-width: 1070px) {
  body{
    background-position:
    left 6rem bottom,
    left 0.25rem bottom 3rem,
    right -6.5rem bottom 0.5rem,
    right 4rem bottom 5rem,
    center bottom;
  }
}


@media only screen and (max-width: 1200px) {
  .page {
    width: 80%;
  }

  #header-desktop .header-wrapper {
    padding-right: 1rem;
  }

  .search-dropdown.desktop {
    right: 1rem;
  }

  .profile{
    margin-right:1rem;
  }
}

@media only screen and (max-width: 990px) {
  #header-desktop .header-wrapper {
    padding-left: 1rem;
  }
}
@media only screen and (max-width: 965px) {
  #header-desktop .header-wrapper .header-title{font-size:1.4rem}
  #header-mobile .header-container .header-wrapper .header-title{font-size:1.4rem}
}

@media only screen and (max-width: 960px) {
  .wrapper main{
    padding-bottom: 16rem;
  }

  body{
    background-position:
    left 11rem bottom 2rem,
    left 1rem bottom 2.5rem,
    right 0.5rem bottom 0.5rem,
    right 16rem bottom 4rem,
    center bottom;
  }

  #toc-auto {
    display: none;
  }

  #toc-static {
    display: block;
  }

  .page {
    width: 80%;
  }

  .container > .profile{
    display:none;
  }

  .toc{
    max-width:none
  }
}

@media only screen and (max-width: 915px) {
  #header-desktop {
    display: none;
  }

  #header-mobile {
    display: block;
  }

  body.blur {
    overflow: hidden;
  }

  #header-mobile .header-container .header-wrapper .header-title{
    max-width:none
  }
}

@media only screen and (max-width: 860px) {
  body{
    background-position:
    left 8rem bottom 1.5rem,
    left 0.25rem bottom 3rem,
    right -3.5rem bottom 0.5rem,
    right 10rem bottom 4rem,
    center bottom;
  }
}

@media only screen and (max-width: 680px) {
  body{
    background-position:
    left 4rem bottom 1.5rem,
    left -2rem bottom 3rem,
    right -4.5rem bottom 0.5rem,
    right 8rem bottom 4rem,
    center bottom;
  }

  #header-mobile .header-container .header-wrapper .header-title{
    font-size:1.25rem
  }

  .wrapper main .container {
    padding-top: 0;
  }

  .page {
    width: 100%;

    [header-mobile] & {
      padding-top: $header-height;
    }

    [header-mobile=normal] & {
      padding-top: 0;
    }

    .categories-card {
      .card-item {
        width: 100%;
      }
    }
  }

  .copyright {
    .copyright-line {
      .icp-splitter {
        display: none;
      }
      .icp-br {
        display: block;
      }
    }
  }
}

@media only screen and (max-width: 620px) {
  .leader-text{display:none;}
}



@media only screen and (max-width: 440px) {
  .is-hidden-mobile{display:none}
  body {
    background:
      // url('/images/blog-bg-enterprise.webp') left 2rem bottom 2rem/7rem no-repeat,
      url('/images/blog-bg-cactus.webp') left -2rem bottom 3rem/11rem no-repeat,
      url('/images/blog-bg-books.webp') right -4.5rem bottom 0.5rem/16rem no-repeat,
      url('/images/blog-bg-bottle.webp') right 7rem bottom 4rem/6rem no-repeat,
      url('/images/blog-bg-desk-alt2.jpg') center bottom no-repeat;
  }
}

